--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -1,16 +1,16 @@
 h1 {
-
-  font-weight: normal;
   font-size:50px;
   color:white;
   text-align: center;
+  font-weight:normal;
 }
 
 body{
   background-color: black;
   text-align: center;
-    color:white;
-    font-family: Verdana;
+  color:white;
+  font-family: Verdana;
+  font-weight: 400;
 }
 
 a {
@@ -23,7 +23,13 @@ h2{
   font-weight: 300;
   font-size: 42px;
 }
-h3{
+p{
   font-size:21px;
   color:gray;
+}
+
+footer{
+  text-align: right;
+  color:gray;
+  font-size:21px;
 }
